incorporated json data onto website

--- a/testing_grounds.ipynb
+++ b/testing_grounds.ipynb
@@ -60,7 +60,7 @@
       "    if await self.run_code(code, result, async_=asy):\n",
       "  File \"/Users/edwardlai/anaconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3553, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"/var/folders/39/n8p80q7s1b13_khp67kt_dlw0000gn/T/ipykernel_49331/1852858922.py\", line 1, in <module>\n",
+      "  File \"/var/folders/39/n8p80q7s1b13_khp67kt_dlw0000gn/T/ipykernel_61369/1852858922.py\", line 1, in <module>\n",
       "    from data_processing import *\n",
       "  File \"/Users/edwardlai/Documents/GitHub/chesslyzer/data_processing.py\", line 179, in <module>\n",
       "    import pandas as pd\n",
@@ -138,7 +138,7 @@
       "    if await self.run_code(code, result, async_=asy):\n",
       "  File \"/Users/edwardlai/anaconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3553, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"/var/folders/39/n8p80q7s1b13_khp67kt_dlw0000gn/T/ipykernel_49331/1852858922.py\", line 1, in <module>\n",
+      "  File \"/var/folders/39/n8p80q7s1b13_khp67kt_dlw0000gn/T/ipykernel_61369/1852858922.py\", line 1, in <module>\n",
       "    from data_processing import *\n",
       "  File \"/Users/edwardlai/Documents/GitHub/chesslyzer/data_processing.py\", line 179, in <module>\n",
       "    import pandas as pd\n",
@@ -216,7 +216,7 @@
       "    if await self.run_code(code, result, async_=asy):\n",
       "  File \"/Users/edwardlai/anaconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3553, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"/var/folders/39/n8p80q7s1b13_khp67kt_dlw0000gn/T/ipykernel_49331/1852858922.py\", line 1, in <module>\n",
+      "  File \"/var/folders/39/n8p80q7s1b13_khp67kt_dlw0000gn/T/ipykernel_61369/1852858922.py\", line 1, in <module>\n",
       "    from data_processing import *\n",
       "  File \"/Users/edwardlai/Documents/GitHub/chesslyzer/data_processing.py\", line 179, in <module>\n",
       "    import pandas as pd\n",
@@ -310,7 +310,7 @@
       "    if await self.run_code(code, result, async_=asy):\n",
       "  File \"/Users/edwardlai/anaconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3553, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"/var/folders/39/n8p80q7s1b13_khp67kt_dlw0000gn/T/ipykernel_49331/1852858922.py\", line 1, in <module>\n",
+      "  File \"/var/folders/39/n8p80q7s1b13_khp67kt_dlw0000gn/T/ipykernel_61369/1852858922.py\", line 1, in <module>\n",
       "    from data_processing import *\n",
       "  File \"/Users/edwardlai/Documents/GitHub/chesslyzer/data_processing.py\", line 179, in <module>\n",
       "    import pandas as pd\n",
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "76175aa4-fa15-4f0b-819d-8a5722c33ace",
    "metadata": {},
    "outputs": [
@@ -365,36 +365,90 @@
      "output_type": "stream",
      "text": [
       "Chesslyzer booting...!!!\n",
-      "castling_counts: my_castling\n",
-      "kingside     2121\n",
-      "none          378\n",
-      "queenside     290\n",
-      "Name: count, dtype: int64\n",
-      "total_time_spent: 1481484\n",
-      "total_moves: 104084\n",
-      "total_win_draw_loss: my_win_or_lose\n",
-      "win     1705\n",
-      "lose     989\n",
-      "draw      95\n",
-      "Name: count, dtype: int64\n",
-      "total_results: my_result\n",
-      "win                   1705\n",
-      "timeout                568\n",
-      "checkmated             399\n",
-      "timevsinsufficient      42\n",
-      "repetition              34\n",
-      "resigned                16\n",
-      "stalemate               13\n",
-      "insufficient             6\n",
-      "agreed                   5\n",
-      "abandoned                1\n",
-      "Name: count, dtype: int64\n",
-      "total_en_passant: 0\n",
-      "total_promotions: 375\n",
-      "total_games: 2789\n",
-      "longest_winning_streak: 25\n",
-      "longest_losing_streak: 8\n",
-      "most_played_opponent: Gerberbaby3\n",
+      "Printing Row: https://www.chess.com/game/daily/589791425 and its time_control 0.3 day(s) per move and also print time_control_seconds Weird\n",
+      "Printing Row: https://www.chess.com/game/daily/630096983 and its time_control 0.3 day(s) per move and also print time_control_seconds Weird\n",
+      "Printing Row: https://www.chess.com/game/daily/606448899 and its time_control 0.3 day(s) per move and also print time_control_seconds Weird\n",
+      "Printing Row: https://www.chess.com/game/daily/636711559 and its time_control 0.3 day(s) per move and also print time_control_seconds Weird\n",
+      "Printing Row: https://www.chess.com/game/daily/653989755 and its time_control 0.3 day(s) per move and also print time_control_seconds Weird\n",
+      "Printing Row: https://www.chess.com/game/daily/684207315 and its time_control 1.0 day(s) per move and also print time_control_seconds Weird\n",
+      "Printing Row: https://www.chess.com/game/computer/165037319 and its time_control Unlimited and also print time_control_seconds Weird\n",
+      "Printing Row: https://www.chess.com/game/computer/176692731 and its time_control Unlimited and also print time_control_seconds Weird\n",
+      "Printing Row: https://www.chess.com/game/daily/728319753 and its time_control 0.3 day(s) per move and also print time_control_seconds Weird\n",
+      "Printing Row: https://www.chess.com/game/daily/733896709 and its time_control 1.0 day(s) per move and also print time_control_seconds Weird\n",
+      "Printing Row: https://www.chess.com/game/daily/738116251 and its time_control 1.0 day(s) per move and also print time_control_seconds Weird\n",
+      "Printing Row: https://www.chess.com/game/daily/735823653 and its time_control 0.3 day(s) per move and also print time_control_seconds Weird\n",
+      "Printing Row: https://www.chess.com/game/daily/589791425 and its time_control 0.3 day(s) per move and also print time_control_seconds Weird\n",
+      "Printing Row: https://www.chess.com/game/daily/630096983 and its time_control 0.3 day(s) per move and also print time_control_seconds Weird\n",
+      "Printing Row: https://www.chess.com/game/daily/606448899 and its time_control 0.3 day(s) per move and also print time_control_seconds Weird\n",
+      "Printing Row: https://www.chess.com/game/daily/636711559 and its time_control 0.3 day(s) per move and also print time_control_seconds Weird\n",
+      "Printing Row: https://www.chess.com/game/daily/653989755 and its time_control 0.3 day(s) per move and also print time_control_seconds Weird\n",
+      "Printing Row: https://www.chess.com/game/daily/684207315 and its time_control 1.0 day(s) per move and also print time_control_seconds Weird\n",
+      "Printing Row: https://www.chess.com/game/computer/165037319 and its time_control Unlimited and also print time_control_seconds Weird\n",
+      "Printing Row: https://www.chess.com/game/computer/176692731 and its time_control Unlimited and also print time_control_seconds Weird\n",
+      "Printing Row: https://www.chess.com/game/daily/728319753 and its time_control 0.3 day(s) per move and also print time_control_seconds Weird\n",
+      "Printing Row: https://www.chess.com/game/daily/733896709 and its time_control 1.0 day(s) per move and also print time_control_seconds Weird\n",
+      "Printing Row: https://www.chess.com/game/daily/738116251 and its time_control 1.0 day(s) per move and also print time_control_seconds Weird\n",
+      "Printing Row: https://www.chess.com/game/daily/735823653 and its time_control 0.3 day(s) per move and also print time_control_seconds Weird\n",
+      "Columns: Index(['url', 'pgn', 'moves', 'date', 'start_time_est', 'end_time_est',\n",
+      "       'time_spent', 'link', 'time_control', 'time_class', 'game_type',\n",
+      "       'rated', 'tcn', 'uuid', 'initial_setup', 'fen', 'rules',\n",
+      "       'white_username', 'white_rating', 'white_result', 'white_metamoves',\n",
+      "       'black_username', 'black_rating', 'black_result', 'black_metamoves',\n",
+      "       'eco', 'my_username', 'my_rating', 'my_result', 'my_color',\n",
+      "       'my_win_or_lose', 'my_metamoves', 'opp_username', 'opp_rating',\n",
+      "       'opp_result', 'opp_metamoves', 'my_time_left', 'opp_time_left',\n",
+      "       'my_num_moves', 'my_time_left_ratio', 'opp_time_left_ratio', 'my_moves',\n",
+      "       'opp_moves', 'my_castling', 'opp_castling', 'en_passant_count',\n",
+      "       'promotion_count'],\n",
+      "      dtype='object')\n",
+      "url                     0\n",
+      "pgn                     0\n",
+      "moves                   0\n",
+      "date                    0\n",
+      "start_time_est          0\n",
+      "end_time_est            0\n",
+      "time_spent              0\n",
+      "link                    0\n",
+      "time_control            0\n",
+      "time_class              0\n",
+      "game_type               0\n",
+      "rated                   0\n",
+      "tcn                     0\n",
+      "uuid                    0\n",
+      "initial_setup           0\n",
+      "fen                     0\n",
+      "rules                   0\n",
+      "white_username          0\n",
+      "white_rating            0\n",
+      "white_result            0\n",
+      "white_metamoves         0\n",
+      "black_username          0\n",
+      "black_rating            0\n",
+      "black_result            0\n",
+      "black_metamoves         0\n",
+      "eco                     0\n",
+      "my_username             0\n",
+      "my_rating               0\n",
+      "my_result               0\n",
+      "my_color                0\n",
+      "my_win_or_lose          0\n",
+      "my_metamoves            0\n",
+      "opp_username            0\n",
+      "opp_rating              0\n",
+      "opp_result              0\n",
+      "opp_metamoves           0\n",
+      "my_time_left            0\n",
+      "opp_time_left           0\n",
+      "my_num_moves            0\n",
+      "my_time_left_ratio     12\n",
+      "opp_time_left_ratio    12\n",
+      "my_moves                0\n",
+      "opp_moves               0\n",
+      "my_castling             0\n",
+      "opp_castling            0\n",
+      "en_passant_count        0\n",
+      "promotion_count         0\n",
+      "dtype: int64\n",
       "Index(['url', 'moves', 'date', 'start_time_est', 'end_time_est', 'time_spent',\n",
       "       'link', 'time_control', 'time_class', 'game_type', 'rated', 'tcn',\n",
       "       'uuid', 'initial_setup', 'fen', 'rules', 'white_username',\n",
@@ -404,16 +458,16 @@
       "       'opp_username', 'opp_rating', 'opp_result', 'opp_metamoves',\n",
       "       'my_time_left', 'opp_time_left', 'my_num_moves', 'my_time_left_ratio',\n",
       "       'opp_time_left_ratio', 'my_moves', 'opp_moves', 'my_castling',\n",
-      "       'opp_castling', 'en_passant_count', 'promotion_count', 'num_moves',\n",
-      "       'rating_diff'],\n",
+      "       'opp_castling', 'en_passant_count', 'promotion_count'],\n",
       "      dtype='object')\n",
-      "Execution time: 4.34 seconds\n"
+      "Execution time: 4.19 seconds\n"
      ]
     }
    ],
    "source": [
     "import time\n",
     "import sys\n",
+    "import json\n",
     "\n",
     "pd.set_option('display.max_rows', None)  # No limit on rows\n",
     "def drop_columns(df):\n",
@@ -427,17 +481,16 @@
     "    \n",
     "    start_time = time.time()\n",
     "    df = fetch_and_process_game_data(username)\n",
-    "    cleaned_df = clean_dataframe(df, username)\n",
-    "    cleaned_df = cleaned_df[cleaned_df['rules'] == 'chess']\n",
+    "    metadata_df = clean_dataframe(df, username)\n",
+    "    print(f\"Columns: {metadata_df.columns}\")\n",
+    "    #print(metadata_df['time_class'].unique())\n",
+    "    chess_df = metadata_df[(metadata_df['rules'] == 'chess') & (metadata_df['time_class'].isin(['blitz', 'rapid', 'bullet', 'daily']))]\n",
+    "    print(chess_df.isna().sum()) #lol kills the daily games, bug atm\n",
+    "    # Drop rows with NaN values (if you want to remove them)\n",
+    "    chess_df = chess_df.dropna()\n",
     "\n",
-    "    statistics = total_statistics(cleaned_df)\n",
-    "    more_statistics = collect_statistics(cleaned_df)\n",
-    "    flag_statistics = get_flag_statistics(cleaned_df)\n",
+    "    statistics = total_statistics(chess_df)\n",
     "\n",
-    "    stats_df = pd.DataFrame(statistics, index=[0])\n",
-    "    #more_stats_df = pd.DataFrame(more_statistics, index=[0])\n",
-    "    #flag_stats_df = pd.DataFrame(flag_statistics, index=[0])\n",
-    "    stats_df.to_csv('statistics.csv', index=False) \n",
     "    \n",
     "    # Concatenate all dataframes along the columns (axis=1)\n",
     "    #final_stats_df = pd.concat([stats_df, more_stats_df, flag_stats_df], axis=1)\n",
@@ -445,14 +498,15 @@
     "    #print(final_stats_df)\n",
     "\n",
     "    \n",
-    "    for stat, value in statistics.items():\n",
-    "        print(f\"{stat}: {value}\")\n",
+    "    # Assuming 'statistics' is a dictionary\n",
+    "    with open(f'json/{username}_statistics.json', 'w') as f:\n",
+    "        json.dump(statistics, f, indent=4)\n",
     "    #for stat, value in flag_statistics.items():\n",
     "        #print(f\"{stat}: {value}\")\n",
     "    #for stat, value in more_statistics.items():\n",
     "        #print(f\"{stat}: {value}\")\n",
     "\n",
-    "    final_df = drop_columns(cleaned_df)\n",
+    "    final_df = drop_columns(chess_df)\n",
     "    final_df.to_csv(f'csv/{username}.csv', index=False)\n",
     "\n",
     "        \n",
@@ -495,7 +549,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
